--- a/final.html
+++ b/final.html
@@ -7,28 +7,30 @@
     <link rel="stylesheet" href="final.css">
 </head>
 <body>
-  <img id="logo" src="logo.png">
-  <div class="sq"><input  class="control" type="search" id="q" name="q" autocomplete="off" maxlength="250" data-customhandled="true" title="Search for the device"  placeholder="search" >
-   </div>
+  
+  <div class="sq"><a href="final1.html" title="home page"><img id="logo" src="logo.png"></a></div>
+  
   <div class="button1">  
-    <button class="p1"></label> </button>
-    <button class="p1"></button>
-    <button class="p1"></button>
-    <button class="p1"></button>
+    <div><button class="p1"><img src="" alt=""></button><p>Muletas medicas</p></div>
+    <div><button class="p1"></button><p>Cama medica</p></div>
+    <div><button class="p1"></button><p>Oxygen containers</p></div>
+    <div><button class="p1"></button><p>Pressure device</p></div>
 
   </div>
   <div class="button2">  
-    <button class="p2"></button>
-    <button class="p2"></button>
-    <button class="p2"></button>
-    <button class="p2"></button>
+    <div><button class="p1"></button><p >Diabetes devices</p></div>
+    <div><button class="p1"></button><p>Hearing aids</p></div>
+    <div><button class="p1"></button><p>Temperature devices</p></div>
+    <div><button class="p1"></button><p>Nebuilzer</p></div>
+
 
   </div>
   <div class="button3">  
-    <button class="p3"></button>
-    <button class="p3"></button>
-    <button class="p3"></button>
-    <button class="p3"></button>
+    <div><button class="p1"></button><p>Wheel chair</p></div>
+    <div><button class="p1"></button><p>Electric wheelchair</p></div>
+    <div><button class="p1"></button><p>Medical stethoscope</p></div>
+    <div><button class="p1"></button><p>Other</p></div>
+
 
   </div>
  
