--- a/final.html
+++ b/final.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-  <div class="sq"><a href="final1.html" title="home page"><img id="logo" src="logo.png"></a></div>
+  <div class="sq"><a href="final1.html" title="home page"><img id="logo" src="photo/logo.png"></a></div>
   
   <div class="button1">  
     <div><button class="p1"><img src="" alt=""></button><p>Muletas medicas</p></div>
